--- a/movie/templates/movie/movie_detail.html
+++ b/movie/templates/movie/movie_detail.html
@@ -112,11 +112,11 @@
                 {% endfor %}
             </p>
             <p class="editContent">
-                {{ movie.description }}
+                {{ movie.description|safe }}
             </p>
             <p class="mt-3 italic-blue editContent">
                 <iframe width="560" height="315"
-                        src="https://www.youtube.com/embed/A36LahZNUiE?controls=0"
+                        src=https://www.youtube.com/watch?v=YLw55x-zOSo&t=29s
                         frameborder="0" allow="accelerometer; autoplay;
                         encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen>
