--- a/movie/templates/movie/movie_detail.html
+++ b/movie/templates/movie/movie_detail.html
@@ -30,15 +30,19 @@
                         <span><b>Слоган:</b> {{ movie.tagline }}</span>
                     </li>
                     <li style="list-style: none">
-                                    <span><b>Режиссер:</b>
-                                        {% for director in movie.directors.all %}
-                                            {{ director.name }}
-                                        {% endfor %}
-                                    </span>
+                        <span><b>Режиссер:</b>
+                            {% for director in movie.directors.all %}
+                                <a href="{{ director.get_absolute_url }}">
+                                    {{ director.name }}
+                                </a>
+                            {% endfor %}
+                        </span>
                     </li>
                     <li style="list-style: none"><span><b>Актеры:</b>
                         {% for actor in movie.actors.all %}
-                            {{ actor.name }}
+                            <a href="{{ actor.get_absolute_url }}">
+                                    {{ actor.name }}
+                            </a>
                         {% endfor %}
                                 </span>
                     </li>
@@ -113,14 +117,6 @@
             </p>
             <p class="editContent">
                 {{ movie.description|safe }}
-            </p>
-            <p class="mt-3 italic-blue editContent">
-                <iframe width="560" height="315"
-                        src=https://www.youtube.com/watch?v=YLw55x-zOSo&t=29s
-                        frameborder="0" allow="accelerometer; autoplay;
-                        encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen>
-                </iframe>
             </p>
         </div>
         <hr>
