--- a/movie/templates/include/footer.html
+++ b/movie/templates/include/footer.html
@@ -119,8 +119,8 @@
 <div class="cpy-right py-3">
     <div class="container">
         <div class="row">
-            <p class="col-md-10 text-left">© 2019 DjangoMovie. All rights reserved | Design by
-                <a href="https://djangochannel.com"> DJANGO SCHOOL.</a>
+            <p class="col-md-10 text-left">© 2023 - 2020 DjangoMovie. All rights reserved | Design by
+                <a href="https://djangochannel.com"> Dastan SCHOOL.</a>
             </p>
             <!-- move top icon -->
             <a href="#home" class="move-top text-right col-md-2"><span
